--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,6 +6,12 @@ layout: compress
 
   {% include head.html %}
 
+    {% if page.featured-img %}
+    <div class="hero lazyload" data-bg="{{ site.url }}{{ site.baseurl }}/assets/img/posts/{{ page.featured-img }}.jpg">
+    {% else %}
+    <div class="hero dark-bg">
+    {% endif %}
+
   <body class="site">
 
     {% if site.google_tag_manager %}
