Remove disqus loader

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -116,7 +116,7 @@ layout: compress
       </div>
     </div>
 
-    {% if site.disqus.shortname %}
+    <!-- {% if site.disqus.shortname %}
 
     <div class="comments">
       <div class="container">
@@ -128,7 +128,7 @@ layout: compress
       </div>
     </div>
 
-    {% endif %}
+    {% endif %} -->
 
   </main>
 
