Add Google Analytics to blog

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,9 @@
   <script type="text/javascript">
    {% include loadCss.js %}
   </script>
+
+{% if jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+
 </head>
